bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/AFH_CampaignAnswers__c.object-meta.xml
<CustomObject>
    <label>Campaign Question Answer</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Campaign Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>