bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/fields/AFH_Answer__c.field-meta.xml
<CustomField>
    <fullName>AFH_Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>