bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <label>Campaign Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>