bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/fields/Campaign_Question__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Question</label>
    <referenceTo>Campaign_Questions__c</referenceTo>
    <relationshipLabel>Campaign Question Answers</relationshipLabel>
    <relationshipName>Campaign_Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>