bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Question Answers</relationshipLabel>
    <relationshipName>Campaign_Question_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>