bundled_metadata/force-app/main/default/objects/AFH_CampaignAnswers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>